# FractalRust

./: Cargo.toml  FractalRust.files  README.md
src/: dragoncurve.rs  levycurve.rs  main.rs  mandelbrot.rs
